[package]
name = "acon"
version = "0.3.3"
authors = ["Bourgond Aries <macocio@gmail.com>"]
license = "GPLv3"
readme = "README.md"
keywords = ["encoding", "decoding", "acon"]
repository = "https://github.com/BourgondAries/acon-rs"
homepage = "https://github.com/BourgondAries/acon-rs"
documentation = "http://acon.stravers.net/"
description = """
A native Rust ACON encoder and decoder. Provides FromStr and Display for deserialization
and serialization respectively. Comes with some utilities to make working with the
data structure easier.
"""

[dependencies]
clippy = "0.0.58"

