[package]
name = "acon"
version = "0.5.2"
authors = ["Kevin Robert Stravers <kevin@stravers.net>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["encoding", "decoding", "acon"]
repository = "https://github.com/kstrafe/acon-rs"
homepage = "https://github.com/kstrafe/acon-rs"
documentation = "http://acon.stravers.net/acon"
description = """
A native Rust ACON encoder and decoder. Provides FromStr and Display for deserialization
and serialization respectively. Comes with some utilities to make working with the
data structure easier.
"""

[dependencies]
# clippy = { version = "0.0.67", optional = true }

[features]
default=[]
